<resources>
    <string name="app_name">Diploma</string>
    <string name="description_def_author_avatar">Default author avatar</string>
    <string name="description_post_menu">Menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_participate">Participate</string>
    <string name="description_post_share">Share</string>
    <string name="description_job_delete">Delete</string>
    <string name="like">Like</string>
    <string name="participate">Participate</string>
    <string name="share">Share</string>
    <string name="enter">Enter</string>
    <string name="your_password">Your password</string>
    <string name="your_login">Your login</string>
    <string name="link">Link</string>
    <string name="choose_avatar">Choose avatar</string>
    <string name="your_name">Your name</string>
    <string name="your_text">Your text</string>
    <string name="position">Your position</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="description_content_image">Content image</string>
    <string name="error_loading">Error</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_feed">Empty feed</string>
    <string name="add_post">Add post</string>
    <string name="add_job">Add job</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_remove">Remove</string>
    <string name="media_error">Media not captured</string>
    <string name="error_empty_registration_form">No login or password entered</string>
    <string name="error_confirm_password">Confirm the password</string>
    <string name="share_post">Share post</string>
    <string name="share_event">Share event</string>
    <string name="clear">Clear</string>
    <string name="my_wall">My Wall</string>
    <string name="my_jobs">My Jobs</string>
    <string name="mentions">Mentions: %d</string>
    <string name="speakers">Speakers: %d</string>
    <string name="participants">Participants: %d</string>
    <string name="likes">Likes: %d</string>
    <string name="start">Start</string>
    <string name="finish">Finish</string>
</resources>