<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.post_fragments.NewPostFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|top"
                android:hint="@string/your_text"
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/link"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|top"
                android:hint="@string/link"
                android:inputType="textMultiLine" />

            <ImageView
                android:id="@+id/previewImage"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content" />

            <VideoView
                android:id="@+id/previewVideo"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="@dimen/media_view_height" />

            <ImageView
                android:id="@+id/previewAudio"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="@dimen/media_view_height"
                app:srcCompat="@drawable/ic_baseline_play_circle_filled_24" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottomAppBar"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/gallery_audio"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_baseline_library_music_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/galleryVideo"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_baseline_video_file_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/galleryImage"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_insert_photo_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/takePhoto"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_photo_camera_24" />
    </LinearLayout>

    <Button
        android:id="@+id/clearMedia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="@dimen/central_button_spacing"
        android:text="@string/clear" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>